# masters-project

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  diagnose_imports.py  gen-seps.cpp  pyproject.toml  requirements.txt
cpp/: algorithms.cpp  algorithms.hpp  bindings.cpp  graph.cpp  graph.hpp  milp_solver.cpp  milp_solver.hpp
data/: generate.py  horse_128.txt  horse_arcs_170.txt  horse_diamonds.txt  horse_diamonds_126.txt  horse_dots.txt  horse_portals_cherries.txt
docs/: cpp-implementation.md  gui-implementation.md  milp-implementation.md
src/horse_algos/: graph.py  main.py
src/horse_algos/algorithms/: __init__.py  algorithm.py  cpp_algorithms.py  gen-seps.py  important_separator.py  milp_ortools.py  naive.py
src/horse_algos/timer/: timer.py
src/horse_algos/tools/: helper.py  map_loader.py
tests/: conftest.py  test_algorithms.py  test_incremental_timer.py  test_map_loader.py
tests/algorithm/: conftest.py  test_algorithms.py  test_cpp_algorithms.py  test_milp_large.py  test_milp_ortools.py
tests/graph/: test_graph.py
web/: index.html  server.py
